# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

- Criado um top de rolls no `/top diversos`. - Sugerido por @mich_solitario. 
- Trocar missões diárias! Agora é possível mudar uma de suas missões diárias. Missões trocadas não dão prêmios em estrelinhas, mas ainda dão o bônus especial. - Sugerido por @mich_solitario.
- Novo comando `/top fazendeiros`. Veja os fazendeiros que mais colheram um tipo de planta.
- Criado um top de missões diárias no `/top diversos`. Apenas as dailies finalizadas após o lançamento desta versão contam.

## [5.18.0] - 2024-06-08

### Added

- Adicionado dois novos tipos de daily: **colher plantas** e **finalizar entregas**.
- Adicionado 41 novos gifs aos comandos de ação (Obg @mareys e @dszalone).

### Changed

- O limite máximo de peso para uma entrega do caminhão da fazendinha foi reduzido para `10 Kg`.
- O número de entregas por dia foi reduzido para `6`.
- O prêmio por finalizar todas entregas foi alterado para **30000** estrelinhas fixas.

### Fixed

- Corrigida a paginação infinita do comando `/fazendinha feira comprar`.

### Removed 

- O comando `/meme humor` foi deletado.

## [5.17.3] - 2024-06-06

### Changed

- Não é mais possível anunciar `Erva` na feirinha.
- Não é mais possível anunciar uma planta que você já tenha um anúncio na feirinha.

### Fixed

- Corrigido o problema do "maior lucro" das mensagens do Jogo do Bicho no servidor de suporte - Reportado por @maycon.orp.

## [5.17.2] - 2024-06-01

### Added

- **Bloquear mamadas**. Usuários podem escolher se querem ser mamadas ou não. 
- Adicionado comando `/personalizar mamadas` para escolher se você quer ou não ser mamado.

### Changed

- A descrição de aceitar uma sarrada foi alterada. 
- O comando `/casar` agora menciona usuários.

### Hotfix