@@ -7,10 +7,16 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ## [Unreleased]
 
+### Added
+
 - Criado um top de rolls no `/top diversos`. - Sugerido por @mich_solitario. 
 - Trocar missões diárias! Agora é possível mudar uma de suas missões diárias. Missões trocadas não dão prêmios em estrelinhas, mas ainda dão o bônus especial. - Sugerido por @mich_solitario.
 - Novo comando `/top fazendeiros`. Veja os fazendeiros que mais colheram um tipo de planta.
 - Criado um top de missões diárias no `/top diversos`. Apenas as dailies finalizadas após o lançamento desta versão contam.
+
+### Changed
+
+- A Menhera não busca mais pelo nome dos usuários das 3 primeiras páginas dos `/top`. 
 
 ## [5.18.0] - 2024-06-08
 
